Bug 1164099 - Always ensure the scrollbar is on the right with select popups r=mconley
UltraBlame original commit: bc1f37d99d6d3c1d0efef30e66c605fe9f7b722b

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1033,6 +1033,9 @@ chatbox:-moz-full-screen-ancestor > .chat-titlebar {
 
 #ContentSelectDropdown > menupopup {
   max-height: 350px;
+  
+
+  direction: ltr;
 }
 
 .contentSelectDropdown-optgroup {
